fix coloring bleed, like other ones
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@24917 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/monaco/obsession/css/main.css
+++ b/skins/monaco/obsession/css/main.css
@@ -99,9 +99,10 @@
 #navigation .navigation-hover>a {
 	background: #7D0B0D;
 }
-#link_box, #link_box_dynamic {
-	background: #1C0400;
+#link_box_table {
+	background-color: #1C0400;
 }
+#link_box_table,
 #link_box_table a {
 	color: #F36F1F;
 }
